home page improvement

--- a/index.html
+++ b/index.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
+    <title>MySite2.0 @Raj Patel</title>
+    <meta name="description"
+      content="A next-gen portfolio website of Raj Patel. It is a fully responsive website with great UI and design. Current version is 2.0">
+    <meta name="author" content="Raj Patel">
+    <meta name="robots" content="index, follow">
+  
+    <!-- Open Graph Meta tags -->
+    <meta property="og:title" content="MySite2.0 @Raj Patel">
+    <meta property="og:site_name" content="MySite2.0">
+    <!-- <meta property="og:url" content="https://raj4823.github.io/MySite/"> -->
+    <meta property="og:description"
+      content="A next-gen portfolio website of mine. It is a fully responsive website with great UI and design. Current version is 2.0">
+    <meta property="og:type" content="website">
+    <!-- <meta property="og:image" content="https://raj4823.github.io/MySite/assets/img/bg2.jpg"> -->
+    <!-- <meta property="og:image:url" content="https://raj4823.github.io/MySite/assets/img/bg2.jpg"> -->
+  
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+  
   </head>
   <body>
     <div id="root"></div>
