--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>MySite2.0 @Raj Patel</title>
+    <title>MySite @Raj Patel</title>
     <meta name="description"
       content="A next-gen portfolio website of Raj Patel. It is a fully responsive website with great UI and design. Current version is 2.0">
     <meta name="author" content="Raj Patel">
     <meta name="robots" content="index, follow">
   
     <!-- Open Graph Meta tags -->
-    <meta property="og:title" content="MySite2.0 @Raj Patel">
-    <meta property="og:site_name" content="MySite2.0">
+    <meta property="og:title" content="MySite @Raj Patel">
+    <meta property="og:site_name" content="MySite">
     <!-- <meta property="og:url" content="https://raj4823.github.io/MySite/"> -->
     <meta property="og:description"
       content="A next-gen portfolio website of mine. It is a fully responsive website with great UI and design. Current version is 2.0">
@@ -25,6 +25,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
+  
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Oxanium:wght@200..800&family=Play:wght@400;700&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
   
   </head>
   <body>
