Updated OpenGraph Meta Tags

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <!-- Open Graph Meta tags -->
     <meta property="og:title" content="MySite @Raj Patel">
     <meta property="og:site_name" content="MySite">
-    <meta property="og:url" content="https://raj4823.github.io/MySite2.0/">
+    <meta property="og:url" content="https://raj4823.github.io/MySite/">
     <meta property="og:description"
-      content="A next-gen portfolio website of mine. It is a fully responsive website with great UI and design. Current version is 2.0">
+      content="A next-gen react based portfolio website of Raj Patel. It is a fully responsive website with great UI and design. Current version is 2.0">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://raj4823.github.io/MySite2.0/images/logo/wallpaper_logo.jpg">
-    <meta property="og:image:url" content="https://raj4823.github.io/MySite2.0/images/logo/wallpaper_logo.jpg">
+    <meta property="og:image" content="https://raj4823.github.io/MySite/images/logo/wallpaper_logo.jpg">
+    <meta property="og:image:url" content="https://raj4823.github.io/MySite/images/logo/wallpaper_logo.jpg">
   
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
