Added Microsoft Clarity

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 
     <!-- Google Site Verification -->
     <meta name="google-site-verification" content="wnQvwUDNTRZ4fChZVmsR8rNX5FIkLx78cwpLCyXzAIA" />
+    
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "u2uhohbbpq");
+</script>
   </head>
   <body>
     <div id="root"></div>
