Migrated to iamraj.dev

--- a/index.html
+++ b/index.html
@@ -1,57 +1,146 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>MySite @Raj Patel</title>
-    <meta name="description"
-      content="A next-gen portfolio website of Raj Patel. It is a fully responsive website with great UI and design. Current version is 2.0">
-    <meta name="author" content="Raj Patel">
-    <meta name="robots" content="index, follow">
-  
-    <!-- Open Graph Meta tags -->
-    <meta property="og:title" content="MySite @Raj Patel">
-    <meta property="og:site_name" content="MySite">
-    <meta property="og:url" content="https://raj4823.github.io/MySite/">
-    <meta property="og:description"
-      content="A next-gen react based portfolio website of Raj Patel. It is a fully responsive website with great UI and design. Current version is 2.0">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://raj4823.github.io/MySite/images/logo/wallpaper_logo.jpg">
-    <meta property="og:image:url" content="https://raj4823.github.io/MySite/images/logo/wallpaper_logo.jpg">
-  
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-  
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Oxanium:wght@200..800&family=Play:wght@400;700&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
-  
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LEGXPNVQW0"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>Raj Patel | Full Stack Developer & Software Engineer | iamraj.dev</title>
+  <meta name="title" content="Raj Patel | Full Stack Developer & Software Engineer | iamraj.dev">
+  <meta name="description"
+    content="Hi, I'm Raj Patel – a passionate Full Stack Developer and Software Engineer. Explore my portfolio showcasing web development projects, skills, and experience.">
+  <meta name="author" content="Raj Patel">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta name="googlebot" content="index, follow">
+
+  <!-- Keywords -->
+  <meta name="keywords"
+    content="Raj Patel, iamraj, iamraj.dev, rajpatel, raj patel developer, raj patel portfolio, full stack developer, software engineer, web developer, react developer, javascript developer, frontend developer, backend developer, MERN stack, portfolio website, hire developer, freelance developer, iamraj.com, rajpatel.com">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://iamraj.dev/">
+
+  <!-- Alternate domains hints -->
+  <meta name="referrer" content="origin-when-cross-origin">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamraj.dev/">
+  <meta property="og:title" content="Raj Patel | Full Stack Developer & Software Engineer">
+  <meta property="og:site_name" content="iamraj.dev - Raj Patel Portfolio">
+  <meta property="og:description"
+    content="Hi, I'm Raj Patel – a passionate Full Stack Developer and Software Engineer. Explore my portfolio showcasing web development projects, skills, and experience.">
+  <meta property="og:image" content="https://iamraj.dev/images/logo/wallpaper_logo.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Raj Patel - Full Stack Developer Portfolio">
+  <meta property="og:locale" content="en_US">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamraj.dev/">
+  <meta name="twitter:title" content="Raj Patel | Full Stack Developer & Software Engineer">
+  <meta name="twitter:description"
+    content="Hi, I'm Raj Patel – a passionate Full Stack Developer and Software Engineer. Explore my portfolio showcasing web development projects, skills, and experience.">
+  <meta name="twitter:image" content="https://iamraj.dev/images/logo/wallpaper_logo.jpg">
+  <meta name="twitter:image:alt" content="Raj Patel - Full Stack Developer Portfolio">
+  <meta name="twitter:creator" content="@raj4823">
+  <meta name="twitter:site" content="@raj4823">
+
+  <!-- Additional SEO Tags -->
+  <meta name="theme-color" content="#0a0a0a">
+  <meta name="msapplication-TileColor" content="#0a0a0a">
+  <meta name="application-name" content="Raj Patel Portfolio">
+  <meta name="apple-mobile-web-app-title" content="Raj Patel">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Geo Tags (optional, for local SEO) -->
+  <meta name="geo.region" content="IN">
+  <meta name="geo.placename" content="India">
+
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/favicon/site.webmanifest">
+
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+  <link rel="dns-prefetch" href="https://www.clarity.ms">
+
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Oxanium:wght@200..800&family=Play:wght@400;700&family=Tektur:wght@400..900&display=swap"
+    rel="stylesheet">
+
+  <!-- Structured Data - JSON-LD -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Raj Patel",
+      "url": "https://iamraj.dev",
+      "image": "https://iamraj.dev/images/logo/wallpaper_logo.jpg",
+      "sameAs": [
+        "https://github.com/raj4823",
+        "https://linkedin.com/in/raj4823",
+        "https://twitter.com/raj4823"
+      ],
+      "jobTitle": "Full Stack Developer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Yubi"
+      },
+      "description": "Full Stack Developer and Software Engineer specializing in React, Java, and modern web technologies.",
+      "knowsAbout": ["Full Stack Development", "React", "JavaScript", "Java", "Software Engineering", "Google Analytics"]
+    }
+    </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Raj Patel Portfolio",
+      "alternateName": ["iamraj.dev", "iamraj", "rajpatel"],
+      "url": "https://iamraj.dev",
+      "description": "Portfolio website of Raj Patel - Full Stack Developer and Software Engineer",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://iamraj.dev/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
     </script>
 
-    <!-- Google Site Verification -->
-    <meta name="google-site-verification" content="wnQvwUDNTRZ4fChZVmsR8rNX5FIkLx78cwpLCyXzAIA" />
-    
-    <!-- Microsoft Clarity -->
-    <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LEGXPNVQW0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-LEGXPNVQW0');
+  </script>
+
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="wnQvwUDNTRZ4fChZVmsR8rNX5FIkLx78cwpLCyXzAIA" />
+
+  <!-- Microsoft Clarity -->
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "u2uhohbbpq");
-</script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
