Improved text and links SEO

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Raj Patel | Full Stack Developer & Software Engineer | iamraj.dev</title>
-  <meta name="title" content="Raj Patel | Full Stack Developer & Software Engineer | iamraj.dev">
+  <title>Raj Patel | Full Stack Developer & Software Engineer</title>
+  <meta name="title" content="Raj Patel | Full Stack Developer & Software Engineer">
   <meta name="description"
     content="Hi, I'm Raj Patel – a passionate Full Stack Developer and Software Engineer. Explore my portfolio showcasing web development projects, skills, and experience.">
   <meta name="author" content="Raj Patel">
