Added Blogs, Improved Pages Navigation and Updated Navbar

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   <meta name="theme-color" content="#0a0a0a">
   <meta name="msapplication-TileColor" content="#0a0a0a">
   <meta name="application-name" content="Raj Patel Portfolio">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="Raj Patel">
-  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="format-detection" content="telephone=no">
 
