Updated blog system components and fixed solar system audio

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Raj Patel | Full Stack Developer & Software Engineer</title>
-  <meta name="title" content="Raj Patel | Full Stack Developer & Software Engineer">
+  <title>Raj Patel | Full Stack Software Developer</title>
+  <meta name="title" content="Raj Patel | Full Stack Software Developer">
   <meta name="description"
-    content="Hi, I'm Raj Patel – a passionate Full Stack Developer and Software Engineer. Explore my portfolio showcasing web development projects, skills, and experience.">
+    content="Hi, I'm Raj Patel – a passionate Full Stack Software Developer. Explore my portfolio showcasing web development projects, skills, and experience.">
   <meta name="author" content="Raj Patel">
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
   <meta name="googlebot" content="index, follow">
@@ -27,10 +27,10 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://iamraj.dev/">
-  <meta property="og:title" content="Raj Patel | Full Stack Developer & Software Engineer">
+  <meta property="og:title" content="Raj Patel | Full Stack Software Developer">
   <meta property="og:site_name" content="iamraj.dev - Raj Patel Portfolio">
   <meta property="og:description"
-    content="Hi, I'm Raj Patel – a passionate Full Stack Developer and Software Engineer. Explore my portfolio showcasing web development projects, skills, and experience.">
+    content="Hi, I'm Raj Patel – a passionate Full Stack Software Developer. Explore my portfolio showcasing web development projects, skills, and experience.">
   <meta property="og:image" content="https://iamraj.dev/images/logo/wallpaper_logo.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -40,11 +40,11 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://iamraj.dev/">
-  <meta name="twitter:title" content="Raj Patel | Full Stack Developer & Software Engineer">
+  <meta name="twitter:title" content="Raj Patel | Full Stack Software Developer">
   <meta name="twitter:description"
-    content="Hi, I'm Raj Patel – a passionate Full Stack Developer and Software Engineer. Explore my portfolio showcasing web development projects, skills, and experience.">
+    content="Hi, I'm Raj Patel – a passionate Full Stack Software Developer. Explore my portfolio showcasing web development projects, skills, and experience.">
   <meta name="twitter:image" content="https://iamraj.dev/images/logo/wallpaper_logo.jpg">
-  <meta name="twitter:image:alt" content="Raj Patel - Full Stack Developer Portfolio">
+  <meta name="twitter:image:alt" content="Raj Patel - Full Stack Software Developer Portfolio">
   <meta name="twitter:creator" content="@raj4823">
   <meta name="twitter:site" content="@raj4823">
 
