--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <title>Raj Patel | Full Stack Software Developer</title>
   <meta name="title" content="Raj Patel | Full Stack Software Developer">
   <meta name="description"
-    content="Hi, I'm Raj Patel – a passionate Full Stack Software Developer. Explore my portfolio showcasing web development projects, skills, and experience.">
+    content="Hi, I'm Raj Patel – a passionate Full Stack Software Developer. Explore my portfolio showcasing web development projects, blogs, skills, and experience.">
   <meta name="author" content="Raj Patel">
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
   <meta name="googlebot" content="index, follow">
 
   <!-- Keywords -->
   <meta name="keywords"
-    content="Raj Patel, iamraj, iamraj.dev, rajpatel, raj patel developer, raj patel portfolio, full stack developer, software engineer, web developer, react developer, javascript developer, frontend developer, backend developer, MERN stack, portfolio website, hire developer, freelance developer, iamraj.com, rajpatel.com">
+    content="Raj Patel, iamraj, iamraj.dev, rajpatel, raj patel developer, raj patel portfolio, raj patel india, raj patel yubi, full stack developer, software engineer, web developer, react developer, javascript developer, frontend developer, backend developer, MERN stack, portfolio website, hire developer, freelance developer, iamraj.com, rajpatel.com, SuperChess, superchess.iamraj.dev">
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://iamraj.dev/">
@@ -30,7 +30,7 @@
   <meta property="og:title" content="Raj Patel | Full Stack Software Developer">
   <meta property="og:site_name" content="iamraj.dev - Raj Patel Portfolio">
   <meta property="og:description"
-    content="Hi, I'm Raj Patel – a passionate Full Stack Software Developer. Explore my portfolio showcasing web development projects, skills, and experience.">
+    content="Hi, I'm Raj Patel – a passionate Full Stack Software Developer. Explore my portfolio showcasing web development projects, blogs, skills, and experience.">
   <meta property="og:image" content="https://iamraj.dev/images/logo/wallpaper_logo.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -42,7 +42,7 @@
   <meta name="twitter:url" content="https://iamraj.dev/">
   <meta name="twitter:title" content="Raj Patel | Full Stack Software Developer">
   <meta name="twitter:description"
-    content="Hi, I'm Raj Patel – a passionate Full Stack Software Developer. Explore my portfolio showcasing web development projects, skills, and experience.">
+    content="Hi, I'm Raj Patel – a passionate Full Stack Software Developer. Explore my portfolio showcasing web development projects, blogs, skills, and experience.">
   <meta name="twitter:image" content="https://iamraj.dev/images/logo/wallpaper_logo.jpg">
   <meta name="twitter:image:alt" content="Raj Patel - Full Stack Software Developer Portfolio">
   <meta name="twitter:creator" content="@raj4823">
@@ -96,8 +96,8 @@
         "@type": "Organization",
         "name": "Yubi"
       },
-      "description": "Full Stack Developer and Software Engineer specializing in React, Java, and modern web technologies.",
-      "knowsAbout": ["Full Stack Development", "React", "JavaScript", "Java", "Software Engineering", "Google Analytics"]
+      "description": "Full Stack Developer and Software Engineer specializing in React, Java, and modern web technologies. Creator of SuperChess - a real-time multiplayer chess platform.",
+      "knowsAbout": ["Full Stack Development", "React", "JavaScript", "Java", "Spring Boot", "Software Engineering", "Google Analytics", "SuperChess", "WebSocket", "Real-time Applications", "Chess Programming", "PostgreSQL", "OAuth2"]
     }
     </script>
   <script type="application/ld+json">
@@ -105,7 +105,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Raj Patel Portfolio",
-      "alternateName": ["iamraj.dev", "iamraj", "rajpatel"],
+      "alternateName": ["iamraj.dev", "iamraj", "rajpatel", "SuperChess", "Raj Patel Portfolio"],
       "url": "https://iamraj.dev",
       "description": "Portfolio website of Raj Patel - Full Stack Developer and Software Engineer",
       "potentialAction": {
