Added hidden keywords and texts

--- a/index.html
+++ b/index.html
@@ -136,9 +136,63 @@
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "u2uhohbbpq");
   </script>
+
+  <style>
+    .description-important {
+      position: absolute !important;
+      width: 1px !important;
+      height: 1px !important;
+      padding: 0 !important;
+      margin: -1px !important;
+      overflow: hidden !important;
+      clip: rect(0, 0, 0, 0) !important;
+      white-space: nowrap !important;
+      border: 0 !important;
+    }
+  </style>
 </head>
 
 <body>
+  <div class="description-important" aria-hidden="true">
+    <h1>Raj Patel - Full Stack Software Developer Portfolio</h1>
+    <p>Welcome to the official portfolio of Raj Patel, a passionate Full Stack Software Developer specializing in
+      React, JavaScript, Java, Spring Boot, and modern web technologies. Currently working at Yubi, building
+      production-ready applications with a focus on scalable architecture and exceptional user experience.</p>
+
+    <h2>About Raj Patel - Software Engineer</h2>
+    <p>Raj Patel is a results-driven software professional based in India with expertise in full stack development.
+      Visit iamraj.dev to explore projects, read tech blogs, and learn about my experience building real-world
+      applications. Also known as iamraj, rajpatel, and raj4823 across the web.</p>
+
+    <h2>Technical Skills & Expertise</h2>
+    <p>Core competencies include React.js, JavaScript, TypeScript, Java, Spring Boot, PostgreSQL, MongoDB, Node.js,
+      REST APIs, WebSocket integration, OAuth2 authentication, and cloud deployment. Experienced in building
+      responsive web applications, real-time multiplayer systems, and enterprise-grade software solutions.</p>
+
+    <h2>Featured Project: SuperChess</h2>
+    <p>SuperChess is a production-ready real-time multiplayer chess platform built from scratch. Features include
+      WebSocket-based gameplay, Stockfish AI integration for computer opponents, OAuth2 authentication, and multiple
+      game modes. Play SuperChess at superchess.iamraj.dev - a free online chess game with friends or AI.</p>
+
+    <h2>Portfolio Highlights</h2>
+    <ul>
+      <li>Show cases my social profiles, education, experience, skills and projects</li>
+      <li>Blogs where I share ideas, stories, and things I amm learning.</li>
+      <li>Interactive 3D Solar System Visualizations with Three.js</li>
+      <li>Real-time Multiplayer Games using WebSocket</li>
+    </ul>
+
+    <h2>Hire Raj Patel</h2>
+    <p>Looking for a skilled full stack developer? Raj Patel is available for freelance projects, consulting, and
+      full-time opportunities. Expertise in React development, Java backend services, and end-to-end application
+      development. Contact through iamraj.dev for collaboration.</p>
+
+    <p>Keywords: Raj Patel, iamraj, iamraj.dev, rajpatel, raj patel developer, raj patel portfolio, raj patel india,
+      full stack developer, software engineer, web developer, react developer, javascript developer, java developer,
+      spring boot developer, frontend developer, backend developer, hire developer, freelance developer, SuperChess,
+      superchess.iamraj.dev, portfolio website, tech blog, software development blog, Yubi developer</p>
+  </div>
+
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
