Added lazy loading for images and solar system

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
   <link rel="manifest" href="/favicon/site.webmanifest">
@@ -164,23 +165,10 @@
       Visit iamraj.dev to explore projects, read tech blogs, and learn about my experience building real-world
       applications. Also known as iamraj, rajpatel, and raj4823 across the web.</p>
 
-    <h2>Technical Skills & Expertise</h2>
-    <p>Core competencies include React.js, JavaScript, TypeScript, Java, Spring Boot, PostgreSQL, MongoDB, Node.js,
-      REST APIs, WebSocket integration, OAuth2 authentication, and cloud deployment. Experienced in building
-      responsive web applications, real-time multiplayer systems, and enterprise-grade software solutions.</p>
-
     <h2>Featured Project: SuperChess</h2>
     <p>SuperChess is a production-ready real-time multiplayer chess platform built from scratch. Features include
       WebSocket-based gameplay, Stockfish AI integration for computer opponents, OAuth2 authentication, and multiple
       game modes. Play SuperChess at superchess.iamraj.dev - a free online chess game with friends or AI.</p>
-
-    <h2>Portfolio Highlights</h2>
-    <ul>
-      <li>Show cases my social profiles, education, experience, skills and projects</li>
-      <li>Blogs where I share ideas, stories, and things I amm learning.</li>
-      <li>Interactive 3D Solar System Visualizations with Three.js</li>
-      <li>Real-time Multiplayer Games using WebSocket</li>
-    </ul>
 
     <h2>Hire Raj Patel</h2>
     <p>Looking for a skilled full stack developer? Raj Patel is available for freelance projects, consulting, and
